# intent-router

./: .gitignore  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
data/: train.csv
src/: main.py  predict.py  seed_data.py  train.py
tests/: test_pipeline_runs.py
